--- a/jitpack.yml
+++ b/jitpack.yml
@@ -6,4 +6,4 @@ install:
   Fl — aar"
 — mvn install:
   - FILE="-Dfile=CommonUtils-release.aar"
-  - mvn install:install-file $FILE -DgroupID=
+  - mvn install:install-file $FILE -DgroupID=com.github.YashKuvadiya -DartifactId=NewTry -Dversion=1.0.0 -Dpackaging=aar -DgeneratePom=true
