--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven—4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://maven.apache.org/POM/4.0.0" >
+    xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.Ø.Ø</modelVersion>
     <groupld>com.github.YashKuvadiya</groupld>
-    <artifactld>NewTry</artifactld>
+    <artifactld>CommonUtils</artifactld>
     <version>1.0.0</version>
     <packaging>pom</packaging>
     <description>First Android</description>
